my-processor-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-processor-ingress
spec:
  rules:
  - host: example.local
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: my-processor-service
              port:
                number: 80
